@@ -5,6 +5,7 @@
   * send a message to the front-end when the audio device is busy
   * revert changes to the DVD plugin that made it impossible to play mounted
     DVDs
+  * use xine network functions in CDDB lookups, fix connection timeout
 
 xine-lib (1-rc3b)
   * fix SDL plugin that was broken in rc3
